--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
-CONNECTION_URL = "mongodb+srv://ahmedradwan:Ahmed2289@ahmeddb.cwvfefq.mongodb.net/RecipesDB?retryWrites=true&w=majority&appName=AhmedDB"
+CONNECTION_URL = "mongodb+srv://ahmedradwan:Ahmed2289@ahmeddb.cwvfefq.mongodb.net/Lab2?retryWrites=true&w=majority&appName=AhmedDB"
+
