--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
+    "numeric": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
